@startuml

title __HOSPITALSERVICEIMP's Class Diagram__\n

  package com.hospital.Hospital {
    package com.hospital.Hospital.domainService.hospitalService {
      package com.hospital.Hospital.domainService.hospitalServiceImp {
        class PrivateHospitalService {
            + treatPatient()
            + calculateMortality()
        }
      }
    }
  }
  

  package com.hospital.Hospital {
    package com.hospital.Hospital.domainService.hospitalService {
      package com.hospital.Hospital.domainService.hospitalServiceImp {
        class PublicHospitalService {
            + treatPatient()
            + calculateMortality()
        }
      }
    }
  }
  

  PrivateHospitalService -up-|> HospitalService
  PublicHospitalService -up-|> HospitalService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
